[gd_scene load_steps=3 format=3 uid="uid://cxbdku1sokntr"]

[ext_resource type="Texture2D" uid="uid://c0egkryj8xcxd" path="res://assets/menu_background_pong.png" id="1_4426h"]
[ext_resource type="Script" path="res://scripts/game_menu.gd" id="1_xs4wq"]

[node name="Game Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xs4wq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -688.0
offset_top = -384.0
offset_right = 688.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4426h")
stretch_mode = 6

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -141.0
offset_right = 219.0
offset_bottom = -40.0
grow_vertical = 0

[node name="PlayAgainstPlayer" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Play against a player"

[node name="PlayAgainstComputer" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Play against computer"

[node name="Quit" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Quit game"

[connection signal="pressed" from="ButtonsContainer/PlayAgainstPlayer" to="." method="_on_play_against_player_pressed"]
[connection signal="pressed" from="ButtonsContainer/PlayAgainstComputer" to="." method="_on_play_against_computer_pressed"]
[connection signal="pressed" from="ButtonsContainer/Quit" to="." method="_on_quit_pressed"]
